# collab-vm-plugin-api

./: .gitmodules  CMakeLists.txt  README.md  package.json
.github/workflows/: actions.yml
include/collabvm/plugin/: PluginAPI.h  PluginAbi.h
src/plugincommon/: AbiImplementation.cpp  CMakeLists.txt
src/sampleplugins/: README.md
src/sampleplugins/helloworld/: CMakeLists.txt  README.md  main.cpp
